fix: hide content of nested accordion in collapsed state (#759)
Closes #758

--- a/src/angular-public/accordion/expansion-panel/expansion-panel.component.scss
+++ b/src/angular-public/accordion/expansion-panel/expansion-panel.component.scss
@@ -37,7 +37,9 @@
   display: flex;
   flex-direction: column;
   overflow: visible;
-  &.ng-animating {
+
+  &.ng-animating,
+  .sbb-expansion-panel:not(.sbb-expanded) & {
     overflow: hidden;
   }
 }
